--- a/HTML/Game3.html
+++ b/HTML/Game3.html
@@ -26,14 +26,15 @@
             flex-direction: row;
             justify-content: center;
             align-items: center;
-            margin-left: 180px;
         }
+
         #gameBoard {
             display: grid;
             grid-template-columns: repeat(5, 100px);
             grid-template-rows: repeat(4, 100px);
             gap: 10px;
         }
+
         .card {
             width: 100px;
             height: 100px;
@@ -45,19 +46,23 @@
             cursor: pointer;
             font-size: 0;
         }
+
         .card img {
             width: 100%;
             height: 100%;
             display: none;
         }
+
         .card.revealed img {
             display: block;
         }
+
         #status {
             margin-top: 20px;
             text-align: center;
             margin-left: 8px;
         }
+
         #controls {
             margin-top: 20px;
             display: flex;
@@ -65,25 +70,63 @@
             gap: 10px;
             margin-left: 5px;
         }
-        #resetButton {
+
+        #resetButton, #otherPageButton {
             background-color: rgb(170, 65, 65);
             border-radius: 15px;
             width: 70px;
             height: 70px;
         }
+
         #otherPageButton {
             background-color: aquamarine;
-            border-radius: 15px;
-            width: 70px;
-            height: 70px;
+        }
+
+        @media (max-width: 768px) {
+            #container {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            #gameBoard {
+                grid-template-columns: repeat(4, 75px);
+                grid-template-rows: repeat(5, 75px);
+            }
+
+            .card {
+                width: 75px;
+                height: 75px;
+            }
+
+            #controls {
+                flex-direction: row;
+                margin-left: 0;
+            }
+
+            #status {
+                margin-left: 0;
+                margin-top: 20px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            #gameBoard {
+                grid-template-columns: repeat(3, 60px);
+                grid-template-rows: repeat(7, 60px);
+            }
+
+            .card {
+                width: 60px;
+                height: 60px;
+            }
         }
     </style>
 </head>
 <body>
     <main>
         <h1>Buscamitad</h1>
-        <p>El ajolote mágico dividio a Paquito y todos los animalitos en 2.</p>
-        <p>Ayudalos a encontrar su otra mitad</p>
+        <p>El ajolote mágico dividió a Paquito y todos los animalitos en 2.</p>
+        <p>Ayúdalos a encontrar su otra mitad</p>
     </main>
     <div id="container">
         <div id="gameBoard"></div>
