--- a/HTML/Sorpresa.html
+++ b/HTML/Sorpresa.html
@@ -33,7 +33,7 @@
         <a href="Money.html">
         <div class="cuadrado">
             <img src="../Imagenes/michidurum.jfif" class="imagen-circular">
-            <h1>Michidurum</h1>
+            <h1>Michikebab</h1>
         </div>
         </a>
         
